added auth to build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,3 +23,9 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+    
+    - id: 'authGCP'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        workload_identity_provider: 'projects/797097160987/locations/global/workloadIdentityPools/swath-gh-idenity-pool/providers/swath-pool-provider-id'
+        service_account: 'swath-service-account@agile-tangent-401105.iam.gserviceaccount.com'
