--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,15 +34,31 @@ jobs:
     - id: 'authGCP'
       uses: 'google-github-actions/auth@v1'
       with:
+        token_format: access_token
         workload_identity_provider: 'projects/797097160987/locations/global/workloadIdentityPools/swath-gh-idenity-pool/providers/swath-pool-provider-id'
         service_account: 'swath-service-account@agile-tangent-401105.iam.gserviceaccount.com'
+        access_token_lifetime: 300s
 
+    # verify docker version
     - name: Docker Version
       run: docker version
 
-# verify docker version
-# authenticate docker
-# create image
-# tag the image
-# push to registry
-# create kube config
+    # create image with docker build
+    - name: Create image
+      run: docker build -t swath-test .
+
+    # check created image in docker local registry
+    - name: Check image
+      run: docker build -t swath-test .
+
+    # authenticate docker with artifact registry
+    # - name: Docker login
+    #   uses: docker/login-action@v1
+    #   with:
+    #     registry: us-west2-docker.pkg.dev
+    #     username: oauth2accesstoken
+    #     password: ${{ steps.auth.outputs.access_token }}
+    
+    # tag the image
+    # push to registry
+    # create kube config
