--- a/.github/workflows/buildNpush.yml
+++ b/.github/workflows/buildNpush.yml
@@ -42,7 +42,9 @@ jobs:
 
     # verify docker version
     - name: Docker Version
-      run: docker version
+      run: |
+        docker version
+        echo ${{ github.event_name}}
 
     # # create image with docker build
     # - name: Create image
@@ -61,11 +63,12 @@ jobs:
         password: ${{ steps.authGCP.outputs.access_token }}
     
 
-    - name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        push: true
-        tags: northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath-test
+    # - name: Build and push with tag
+    # #   if: ${{ env.GITHUB_EVENT_NAME != 'workflow_dispatch'}} 
+    #   uses: docker/build-push-action@v5
+    #   with:
+    #     push: true
+    #     tags: northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath-test
 
 
     # tag the image
