--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -12,7 +12,8 @@ spec:
   - host: swath.gule-gulzar.com
     http:
       paths:
-      - backend:
+      - path: "/"
+        backend:
           service:
             name: swath-lb
             port:
