updated service to local load balancer

--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -5,7 +5,11 @@ metadata:
     app: swath
   name: swath-lb
   namespace: swath
+  annotations:
+    networking.gke.io/load-balancer-type: "Internal"
 spec:
+  type: LoadBalancer
+  externalTrafficPolicy: Cluster
   selector:
     app: swath
   ports:
