static ip initialized

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
   name: swath-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.global-static-ip-name: gke-static-ip
 spec:
   rules:
   - host: swath.gule-gulzar.com
