--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
   name: swath-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-    kubernetes.io/ingress.regional-static-ip-name: "gke-static-ip"
+    kubernetes.io/ingress.global-static-ip-name: "static-ip-gke"
 spec:
   rules:
   - host: swath.gule-gulzar.com
