--- a/k8s/managedcertificate.yaml
+++ b/k8s/managedcertificate.yaml
@@ -1,6 +1,9 @@
 apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
 metadata:
+  labels:
+    app: swath
+  namespace: swath
   name: managed-certificate
 spec:
   domains:
