--- a/k8s/httpredirect.yaml
+++ b/k8s/httpredirect.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.gke.io/v1beta1
 kind: FrontendConfig
 metadata:
   name: redirect-http
+  namespace: swath
 spec:
   redirectToHttps:
     enabled: true
