--- a/k8s/httpredirect.yaml
+++ b/k8s/httpredirect.yaml
@@ -1,6 +1,8 @@
 apiVersion: networking.gke.io/v1beta1
 kind: FrontendConfig
 metadata:
+  labels:
+    app: swath
   name: redirect-http
   namespace: swath
 spec:
