--- a/.github/workflows/buildNpush.yml
+++ b/.github/workflows/buildNpush.yml
@@ -75,6 +75,7 @@ jobs:
       if: ${{ github.event_name != 'workflow_dispatch'}} 
       uses: docker/build-push-action@v5
       with:
+        build-args: version=${{  github.ref_name }}
         push: true
         tags: northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath:latest , northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath:${{  github.ref_name }}
 
