--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,5 +16,5 @@ spec:
         app: swath
     spec:
       containers:
-      - image: northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath@sha256:ba278dc05b7fd3ced3718b41ff5e68d84ceb5620bbdc10689b298efdacac573e
+      - image: northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath:latest
         name: swath
