--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        repository: https://github.com/adorigi/patroller
+        repository: adorigi/patroller
 
     - id: 'authGCP'
       uses: 'google-github-actions/auth@v1'
