explicit versioning for deployment image version

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,5 +16,5 @@ spec:
         app: swath
     spec:
       containers:
-      - image: northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath:latest
+      - image: northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath:0.1.5
         name: swath
